--- a/server/Gemfile
+++ b/server/Gemfile
@@ -22,6 +22,14 @@ end
 
 gem 'jquery-rails'
 gem 'devise', '>= 2.2.3'
+gem 'vagrant', '1.2.2'
+gem "friendly_id", "~> 4.0.9"
+gem "settingslogic", "~> 2.0.9"
+
+group :development, :test do
+  gem 'debugger'
+  gem 'pry-rails'
+end
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
@@ -34,6 +42,3 @@ gem 'devise', '>= 2.2.3'
 
 # Deploy with Capistrano
 # gem 'capistrano'
-
-# To use debugger
-# gem 'debugger'
