Add initialize data with seed-fu. Add vagrant template file. Add base functionality for cloud.

--- a/server/config/diors.yml.example
+++ b/server/config/diors.yml.example
@@ -3,6 +3,9 @@ production: &base
     vm:
       root_path: VM_ROOT_PATH
       user: VM_USER
+    network:
+      nic: NETWORK_INTERFACE_CARD
+      bridge: BRIDGED_NETWORK_INTERFACE
 
 development:
   <<: *base
