--- a/server/Gemfile
+++ b/server/Gemfile
@@ -25,6 +25,7 @@ gem 'devise', '>= 2.2.3'
 gem 'vagrant', '1.2.2'
 gem "friendly_id", "~> 4.0.9"
 gem "settingslogic", "~> 2.0.9"
+gem 'seed-fu', '2.2.0'
 
 group :development, :test do
   gem 'debugger'
