diors grape api layout

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -7,6 +7,9 @@ gem 'rails', '3.2.12'
 
 gem 'mysql2'
 
+# API
+gem "grape", "~> 0.3.1"
+gem "grape-entity", "~> 0.2.0"
 
 # Gems used only for assets and not required
 # in production environments by default.
