--- a/server/Gemfile
+++ b/server/Gemfile
@@ -29,11 +29,15 @@ gem 'vagrant', '1.2.2'
 gem "friendly_id", "~> 4.0.9"
 gem "settingslogic", "~> 2.0.9"
 gem 'seed-fu', '2.2.0'
-gem "rye", "~> 0.9.8"
+gem 'sidekiq', '~> 2.11.2'
+gem "rest-client", "~> 1.6.7"
+gem 'redis', "~> 3.0.4"
 
 group :development, :test do
   gem 'debugger'
   gem 'pry-rails'
+  gem 'capistrano', '~> 2.14.2'
+  gem 'thin'
 end
 
 # To use ActiveModel has_secure_password
